--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -13,7 +13,9 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-maps": "1.7.1"
+    "react-native-maps": "1.7.1",
+    "react-native-safe-area-context": "4.6.3",
+    "expo-linear-gradient": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
