--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -21,10 +21,10 @@
     "react-native-permissions": "^3.8.4",
     "react-native-qrcode-scanner": "^1.5.5",
     "expo-barcode-scanner": "~12.5.3",
-    "expo-media-library": "~15.4.1"
+    "expo-media-library": "~15.4.1",
     "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "4.6.3",
-    "expo-linear-gradient": "~12.3.0"
+    "expo-linear-gradient": "~12.3.0",
     "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
