--- a/client-admin/package.json
+++ b/client-admin/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
+    "@heroicons/react": "^2.0.18",
     "graphql": "^16.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
