chore: bug in auth

--- a/client-mobile/app.json
+++ b/client-mobile/app.json
@@ -18,6 +18,9 @@
       "supportsTablet": true,
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses the camera to scan barcodes on event tickets."
+      },
+      "config": {
+        "usesNonExemptEncryption": false
       }
     },
     "android": {
