--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -15,19 +15,21 @@
     "expo": "~49.0.8",
     "expo-barcode-scanner": "~12.5.3",
     "expo-linear-gradient": "~12.3.0",
+    "expo-location": "~16.1.0",
     "expo-media-library": "~15.4.1",
+    "expo-secure-store": "^12.3.1",
     "expo-status-bar": "~1.6.0",
     "json-server": "^0.17.3",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-camera": "^4.2.1",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-maps": "1.7.1",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-permissions": "^3.8.4",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-location": "~16.1.0"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
