--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.5",
     "expo": "~49.0.8",
     "expo-barcode-scanner": "~12.5.3",
     "expo-linear-gradient": "~12.3.0",
@@ -29,7 +30,8 @@
     "react-native-permissions": "^3.8.4",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
