--- a/client-admin/package.json
+++ b/client-admin/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.1",
     "@heroicons/react": "^2.0.18",
+    "daisyui": "^3.6.3",
     "graphql": "^16.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +32,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
