--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -20,6 +20,7 @@
     "expo-media-library": "~15.4.1",
     "expo-secure-store": "^12.3.1",
     "expo-status-bar": "~1.6.0",
+    "geolib": "^3.3.4",
     "json-server": "^0.17.3",
     "react": "18.2.0",
     "react-native": "0.72.4",
