--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
@@ -20,6 +21,7 @@
     "expo-media-library": "~15.4.1",
     "expo-secure-store": "^12.3.1",
     "expo-status-bar": "~1.6.0",
+    "graphql": "^15.8.0",
     "json-server": "^0.17.3",
     "react": "18.2.0",
     "react-native": "0.72.4",
