--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -33,7 +33,8 @@
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "react-native-reanimated": "~3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
