--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -35,7 +35,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-webview": "^13.4.0",
+    "react-native-webview": "13.2.2",
     "react-redux": "^8.1.2"
   },
   "devDependencies": {
