--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -21,8 +21,8 @@
     "expo-media-library": "~15.4.1",
     "expo-secure-store": "^12.3.1",
     "expo-status-bar": "~1.6.0",
-    "graphql": "^15.8.0",
     "geolib": "^3.3.4",
+    "graphql": "^15.8.0",
     "json-server": "^0.17.3",
     "react": "18.2.0",
     "react-native": "0.72.4",
@@ -32,10 +32,11 @@
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-permissions": "^3.8.4",
     "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-redux": "^8.1.2",
-    "react-native-reanimated": "~3.3.0"
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
