--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
+    "@mapbox/polyline": "^1.2.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-barcode-scanner": "~12.5.3",
     "expo-linear-gradient": "~12.3.0",
@@ -35,9 +38,8 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-redux": "^8.1.2",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.2.2",
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
