--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -32,6 +32,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-maps": "1.7.1",
+    "react-native-modal": "^13.0.1",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-permissions": "^3.8.4",
     "react-native-qrcode-scanner": "^1.5.5",
