--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
@@ -21,8 +22,8 @@
     "expo-media-library": "~15.4.1",
     "expo-secure-store": "^12.3.1",
     "expo-status-bar": "~1.6.0",
-    "graphql": "^15.8.0",
     "geolib": "^3.3.4",
+    "graphql": "^15.8.0",
     "json-server": "^0.17.3",
     "react": "18.2.0",
     "react-native": "0.72.4",
@@ -32,10 +33,10 @@
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-permissions": "^3.8.4",
     "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-redux": "^8.1.2",
-    "react-native-reanimated": "~3.3.0"
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
