--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@mapbox/polyline": "^1.2.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.7",
@@ -32,10 +33,10 @@
     "react-native-camera": "^4.2.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-maps": "1.7.1",
+    "react-native-modal": "^13.0.1",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-permissions": "^3.8.4",
     "react-native-qrcode-scanner": "^1.5.5",
-    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-webview": "13.2.2",
