--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
+    "@expo/vector-icons": "^13.0.0",
     "@mapbox/polyline": "^1.2.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -42,8 +43,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-webview": "13.2.2",
-    "react-redux": "^8.1.2",
-    "@expo/vector-icons": "^13.0.0"
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
