--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -42,6 +42,7 @@
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-webview": "13.2.2",
     "react-redux": "^8.1.2"
   },
